# yuyin

./: .gitignore  README.md  VoiceCube.spec  atoms3-voicestick-plan.md  build_desktop.ps1  build_exe.py  build_firmware.bat  build_fw.bat  build_fw.py  build_log.txt  build_step1.bat  dl_vs.ps1  extract_opus.bat  flash_fw.py  installer.nsi  monitor.py  push_to_github.sh  release_com3.py  setup_opus.bat  step1.bat
.claude/projects/d--WAN-yuyinzhushou/memory/: MEMORY.md  button-gpio-pin.md
desktop/python/: main.py  requirements.txt
desktop/python/voicestick/: app.py  asr_client.py  asr_protocol.py  ble.py  config.py  coordinator.py  input_injector.py  ogg_opus_muxer.py  protocol.py
desktop/python/voicestick/ui/: floatball.py  overlay.py  pairing.py  settings.py  subtitle.py
desktop/windows/: CMakeLists.txt  README.md
desktop/windows/src/: app_config.h  asr_protocol.cc  asr_protocol.h  ble_central_win.cc  overlay_window.h  pair_device_dialog.cc  voice_stick_cloud_api_win.cc  voice_stick_cloud_api_win.h  win32_app.cc
docs/: pdm-debug-log.md  protocol.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/opus/: CMakeLists.txt
firmware/main/: CMakeLists.txt  ble_service.c  ble_service.h  board_config.h  button.c  button.h  display.c  display.h  es8311_codec.c  es8311_codec.h  led_matrix.c  led_matrix.h  main.c  opus_encoder.c  opus_encoder.h  pdm_mic.c  pdm_mic.h
